fixed step 3 alignment

--- a/bizi/src/App.css
+++ b/bizi/src/App.css
@@ -617,39 +617,40 @@ nav.dark #myAccount a{
   grid-template-columns: repeat(4, 1fr);
   margin: 0 auto;
   width: 60vw;
-  height: 12vw;
   column-gap: 4.5vw;
-}
-
-.userPrefRows {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  width: 11vw;
-  row-gap: 25%;
-}
-
-.prefRow {
   border-style: solid;
-  border-radius: 20px;
-  border-color: #385FDC;
-  border-width: 5px;
-  position: relative;
-  /* position: absolute; */
-  height: 2vw;
-  /* width: 10vw; */
-  text-align: center;
-  vertical-align: middle;
-  display: inline-block;
 }
 
 .prefCol {
   border-style: solid;
+  text-align: center;
+  position: relative;
   border-radius: 20px;
   border-color: #385FDC;
   border-width: 5px;
-  position: relative;
-  height: 11.5vw;
-  width: 11vw;
+}
+
+.prefCol span {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  left: 50%;
+  margin-left: -50%;
+}
+
+.userPrefSubGrid {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  row-gap: 1vw;
+}
+
+.prefRow {
+  border-style: solid;
+  text-align: center;
+  border-radius: 20px;
+  border-color: #385FDC;
+  border-width: 5px;
 }
 
 #invisibleColumn {
@@ -657,30 +658,13 @@ nav.dark #myAccount a{
 }
 
 .prefCol img {
-  width: 6vw;
-  height: 6vw;
-  margin-bottom: 2vw;
-  margin-top: 1vw;
+  width: 10vw;
+  height: 10vw;
 }
 
-.prefRow p {
-  position: absolute;
+.userPreferencesGrid p {
   font-size: 1.25em;
   color: #385FDC;
-  font-weight: 600;
-  top: -1.1vw;
-  text-align: center;
-  
-}
-
-.prefCol p {
-  position: absolute;
-  font-size: 1.25em;
-  color: #385FDC;
-  text-align: center;
-  bottom: -1vw;
-  left: 0;
-  right: 0;
   font-weight: 600;
 }
 
